--- a/src/main/resources/templates/admin/content/pages/shop/list.html
+++ b/src/main/resources/templates/admin/content/pages/shop/list.html
@@ -75,8 +75,12 @@
 					<table class="table">
 						<tbody>
 						<tr>
-							<th scope="row">한줄 소개</th>
+							<th scope="row">스토어 소개 제목</th>
 							<td th:text="${shop.introduce}"></td>
+						</tr>
+						<tr>
+							<th scope="row">스토어 소개 내용</th>
+							<td th:text="${shop.introduceSub}"></td>
 						</tr>
 						<tr>
 							<th scope="row">주소</th>
