--- a/src/main/resources/templates/admin/content/pages/shop/list.html
+++ b/src/main/resources/templates/admin/content/pages/shop/list.html
@@ -80,7 +80,7 @@
 						</tr>
 						<tr>
 							<th scope="row">스토어 소개 내용</th>
-							<td th:text="${shop.introduceSub}"></td>
+							<td th:utext="${shop.introduceSub}"></td>
 						</tr>
 						<tr>
 							<th scope="row">주소</th>
@@ -93,6 +93,10 @@
 						<tr>
 							<th scope="row">운영 시간</th>
 							<td th:text="${shop.operatingTime}"></td>
+						</tr>
+						<tr>
+							<th scope="row">휴무일</th>
+							<td th:text="${shop.breakTime}"></td>
 						</tr>
 						<tr>
 							<th scope="row">샵 생성일</th>
