관리자 페이지 모달 사이즈 변경

--- a/src/main/resources/templates/admin/content/pages/cs/list.html
+++ b/src/main/resources/templates/admin/content/pages/cs/list.html
@@ -15,7 +15,7 @@
 
 	<!--/*@thymesVar id="product" type="com.sch.shift3.user.dto.QnaRequest"*/-->
 	<div class="modal" tabindex="-1" th:each="question : ${questionList}" th:attr="id=${'detailModal' + question.id}">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-fullscreen-xl-down">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" th:text="${question.questionTitle}"></h5>
